[gd_scene load_steps=8 format=3 uid="uid://bxcuknasdyddo"]

[ext_resource type="Texture2D" uid="uid://c1ihics7it8s7" path="res://assets/menu_background.png" id="1_6lkhv"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_jb031"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b7ooy"]
texture = ExtResource("1_6lkhv")
modulate_color = Color(0.316167, 0.316167, 0.316167, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24dox"]
bg_color = Color(0.214103, 0.214103, 0.214103, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qrrt"]
bg_color = Color(0.654232, 0.654232, 0.654232, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nk3ph"]
bg_color = Color(0.364711, 0.364711, 0.364711, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_npgcx"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 8

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -81.0
offset_right = 144.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jb031")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_b7ooy")

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.5
offset_right = 108.5
offset_bottom = 47.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 24
text = "Princess Dragon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -30.0
offset_right = 90.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="Start" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../Quit")
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_right = NodePath("../Debug")
focus_neighbor_bottom = NodePath("../Debug")
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.66459, 0.775854, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxFlat_24dox")
theme_override_styles/hover = SubResource("StyleBoxFlat_3qrrt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nk3ph")
theme_override_styles/normal = SubResource("StyleBoxFlat_npgcx")
text = "Start game"

[node name="Debug" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../Start")
focus_neighbor_top = NodePath("../Start")
focus_neighbor_right = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Quit")
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.66459, 0.775854, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxFlat_24dox")
theme_override_styles/hover = SubResource("StyleBoxFlat_3qrrt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nk3ph")
theme_override_styles/normal = SubResource("StyleBoxFlat_npgcx")
text = "Debug"

[node name="Quit" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../Debug")
focus_neighbor_top = NodePath("../Debug")
focus_neighbor_right = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Start")
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.66459, 0.775854, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxFlat_24dox")
theme_override_styles/hover = SubResource("StyleBoxFlat_3qrrt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nk3ph")
theme_override_styles/normal = SubResource("StyleBoxFlat_npgcx")
text = "Quit
"

[connection signal="visibility_changed" from="CanvasLayer" to="." method="_on_canvas_layer_visibility_changed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Debug" to="." method="_on_debug_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/Quit" to="." method="_on_quit_pressed"]
